--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-typescript": "^7.10.1",
     "@types/express": "^4.17.6",
     "@types/jest": "^26.0.0",
+    "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -37,6 +38,10 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.27",
+    "multer": "^1.4.2"
   }
 }
