--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -31,7 +31,7 @@
       "react/jsx-props-no-spreading": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
-      "no-unused-expressions": "off",
+      "jsx-a11y/label-has-associated-control": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
       "@typescript/indent": "off",
