--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -26,6 +26,7 @@
     ],
     "rules": {
       "prettier/prettier": "error",
+      "no-underscore-dangle": "off",
       "react/jsx-one-expression-per-line": "off",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
