--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
